Fixed spacing between login and header, added SNACKBAR to 'addItemToShop' from inventory

--- a/application/src/Components/Presentation/Inventory/Inventory.css
+++ b/application/src/Components/Presentation/Inventory/Inventory.css
@@ -36,25 +36,6 @@
     background-color: red;
 }
 
-.addShoppingItemBtn{
-    width: 8vw;
-    height: 3vw;
-    max-width: 100px;
-    max-height: 40px;
-    min-width: 50px;
-    min-height: 40px;
-    background-color: #75AC4A;
-    border-radius: 15px;
-    border-color: #75AC4A;
-		margin-bottom: 10px;
-		box-shadow: 1px 1px 2px 1px rgb(189, 189, 189);
-}
-
-.addShoppingItemBtn:hover{
-    border-color: #308D40;
-    background-color: #308D40;
-}
-
 
 .addItemBtn{
     width: 10vw;
