--- a/application/src/Components/Presentation/LogIn/LogIn.css
+++ b/application/src/Components/Presentation/LogIn/LogIn.css
@@ -3,7 +3,7 @@
 }
 
 #signInContainer {
-    margin-top: 5px;
+    margin-top: 10vh;
     background-color: white;
     border-radius: 10px;
     padding: 20px;
